fix: remove useless and possibly breaking requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
-datasets
-huggingface_hub
-ipywidgets
-pandas
-tensorflow
-flax
-immutabledict==4.2.0
-jax[cuda]
-jaxtyping
-numpy==1.26.0
-optax
-scikit-learn
-torch==2.4.0
+torch
+transformers
+numpy
 tqdm
-transformers==4.43.3
-accelerate
+ai2-olmo
